--- a/Predicting+stock+price+LSTM+vs+Linear+Model.ipynb
+++ b/Predicting+stock+price+LSTM+vs+Linear+Model.ipynb
@@ -1,13 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# In fames of the project i tried to predict stock price using LSTM Neural Network (1 input layer, 2 hidden layers, 1 output layer) to predict the future closing price of the stock based on the previous prices 60 days before. \n",
+    "\n",
+    "# The data was obtained from yahoo finance for the Apple stock (daily, ticker \"AAPL\") for the period from 2012-01-01 to 2019-12-17. \n",
+    "\n",
+    "# The LSTM model gave pretty much accurate prediction if to compare with simple linear model (RMSE 6.12 vs 43.27)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#Based on\n",
     "#https://www.youtube.com/watch?v=QIUxPv5PJOY"
    ]
   },
@@ -417,6 +427,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RMSE for LSTM NN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -654,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
