--- a/Predicting+stock+price+LSTM+vs+Linear+Model.ipynb
+++ b/Predicting+stock+price+LSTM+vs+Linear+Model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In fames of the project i tried to predict stock price using LSTM Neural Network (1 input layer, 2 hidden layers, 1 output layer) to predict the future closing price of the stock based on the previous prices 60 days before. \n",
+    "# In frames of the project I tried to predict stock price using LSTM Neural Network (1 input layer, 2 hidden layers, 1 output layer) to predict the future closing price of the stock based on the previous prices 60 days before. \n",
     "\n",
     "# The data was obtained from yahoo finance for the Apple stock (daily, ticker \"AAPL\") for the period from 2012-01-01 to 2019-12-17. \n",
     "\n",
